--- a/package.json
+++ b/package.json
@@ -2,23 +2,27 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "bypass-paywall",
   "title": "Bypass Paywall",
-  "description": "This extension bypasses paywall in your current URL. It works with your favorite browsers",
+  "description": "Bypass paywalls on popular services.",
   "icon": "extension-icon.png",
   "author": "maxoliinyk",
+  "categories": [
+    "Web",
+    "Productivity"
+  ],
   "license": "MIT",
   "commands": [
     {
       "name": "bypass-for-current-tab",
       "title": "Bypass for Current Tab",
-      "subtitle": "",
-      "description": "Detects your currently active browser tab, and bypasses paywall for it.",
+      "subtitle": "Paywall",
+      "description": "Bypass the paywall from the URL in your active browser tab.",
       "mode": "no-view"
     },
     {
       "name": "bypass-from-clipboard",
       "title": "Bypass from Clipboard",
-      "subtitle": "",
-      "description": "Reads a URL from your clipboard, bypasses the paywall, and copies the new URL back to clipboard.",
+      "subtitle": "Paywall",
+      "description": "Bypass the paywall from a clipboard URL.",
       "mode": "no-view"
     }
   ],
